2007-10-28  Juanma Barranquero  <lekktu@gmail.com>

	* makefile.w32-in (OBJ1): Remove abbrev.$(O).
	($(BLD)/abbrev.$(O)): Remove.

2007-10-28  Stefan Monnier  <monnier@iro.umontreal.ca>

	Rewrite abbrev.c in Elisp.
	* image.c (Qcount): Don't declare as extern.
	(syms_of_image): Initialize and staticpro `Qcount'.
	* puresize.h (BASE_PURESIZE): Increase for the new abbrev.el functions.
	* emacs.c (main): Don't call syms_of_abbrev.
	* Makefile.in (obj): Remove abbrev.o.
	(abbrev.o): Remove.
	* abbrev.c: Remove.

2007-10-26  Martin Rudalics  <rudalics@gmx.at>

	* window.c (window_min_size_2): Don't count header-line.

2007-10-26  Dan Nicolaescu  <dann@ics.uci.edu>

	* frame.h (struct frame): Move all bit fields after the first bit
	field to take advantage of the available space.  Group all the
	chars together to reduce wasted space due to padding.

2007-10-26  Juanma Barranquero  <lekktu@gmail.com>

	* minibuf.c (Fread_minibuffer, Feval_minibuffer): Reflow docstrings.

	* alloc.c (spare_memory, stack_copy, stack_copy_size, ignore_warnings)
	(Vdead, dont_register_blocks, staticvec, staticidx, interval_block)
	(n_interval_blocks, init_strings, check_string_bytes, check_sblock)
	(init_float, free_float, n_cons_blocks, init_cons, all_vectors)
	(n_vectors, symbol_block, symbol_block_index, symbol_free_list)
	(n_symbol_blocks, init_symbol, marker_block, marker_free_list)
	(n_marker_blocks, init_marker, valid_pointer_p, make_pure_float)
	(last_marked, mark_object_loop_halt): Make static.

	* frame.c (syms_of_frame) <delete-frame-functions>:
	Fix typo in docstring.

2007-10-25  Juanma Barranquero  <lekktu@gmail.com>

	* w32.c (init_environment): Fix tiny memory leak.
	(w32_get_resource): Remove unused variable `ok'.

2007-10-25  Stefan Monnier  <monnier@iro.umontreal.ca>

	Make `window-system' into a keyboard-local variable (rather than
	frame-local as done originally by multi-tty).

	* keyboard.h (struct kboard): Add Vwindow_system.